--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "20"
-      - run: yarn install
+      - run: npm install
       - uses: reviewdog/action-eslint@v1
         with:
           reporter: github-check
