--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -23,5 +23,5 @@ jobs:
       - run: npm install
       - uses: reviewdog/action-eslint@v1
         with:
-          reporter: github-pr-review
+          reporter: github-check
           eslint_flags: "src/"
