--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -24,4 +24,4 @@ jobs:
       - uses: reviewdog/action-eslint@v1
         with:
           reporter: github-check
-          eslint_flags: "src/"
+          eslint_flags: "src/**/*.ts"
