--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           node-version: "20"
       - run: npm install
+      - run: npm run lint
       - uses: reviewdog/action-eslint@v1
         with:
           reporter: github-check
