--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -25,4 +25,4 @@ jobs:
       - uses: reviewdog/action-eslint@v1
         with:
           reporter: github-check
-          eslint_flags: "src/**/*.ts"
+          eslint_flags: "-c .eslintrc.js"
