--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -23,5 +23,6 @@ jobs:
       - run: npm install
       - uses: reviewdog/action-eslint@v1
         with:
+          github_token: ${{ secrets.github_token }}
           reporter: github-check
-          eslint_flags: "-c .eslintrc.js"
+          eslint_flags: "src/**/*.ts"
