--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -22,5 +22,5 @@ jobs:
       - run: npm install
       - uses: reviewdog/action-eslint@v1
         with:
-          reporter: github-check
+          reporter: github-pr-review
           eslint_flags: "src/**/*.ts"
