--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -23,4 +23,4 @@ jobs:
       - uses: reviewdog/action-eslint@v1
         with:
           reporter: github-pr-review
-          eslint_flags: "src/**/*.ts"
+          eslint_flags: "src/**/*.ts -c .eslintrc.js -f checkstyle"
