--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -1,26 +1,16 @@
 name: reviewdog
 on: [pull_request]
 jobs:
-  misspell:
-    name: runner / misspell
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code.
-        uses: actions/checkout@v4
-      - name: misspell
-        uses: reviewdog/action-misspell@v1
-        with:
-          locale: "US"
   eslint:
     name: runner / eslint
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "20"
-      - run: npm install
       - uses: reviewdog/action-eslint@v1
         with:
-          reporter: github-pr-review
-          eslint_flags: "src/**/*.ts -c .eslintrc.js -f checkstyle"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          reporter: github-pr-review # Change reporter.
+          eslint_flags: "src/"
