--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -12,5 +12,6 @@ jobs:
       - uses: reviewdog/action-eslint@v1
         with:
           github_token: ${{ secrets.REVIEWDOG_TOKEN}}
-          reporter: github-pr-review # Change reporter.
+          reporter: github-pr-check
+          level: warning
           eslint_flags: "src/"
