--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -9,9 +9,14 @@ jobs:
       pull-requests: write
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+      - run: npm install --save-dev eslint-formatter-rdjson
       - uses: reviewdog/action-eslint@v1
         with:
           github_token: ${{ secrets.REVIEWDOG_TOKEN}}
           reporter: github-pr-check
           level: warning
-          eslint_flags: "src/"
+          eslint_flags: "src/ -f rdjson ."
+          reviewdog_flags: rdjson
