--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -14,3 +14,4 @@ jobs:
           github_token: ${{ secrets.REVIEWDOG_TOKEN}}
           eslint_flags: "src/"
           filter_mode: nofilter
+          fail_on_error: true
