--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -1,6 +1,18 @@
 name: reviewdog
 on: [pull_request]
 jobs:
+  misspell:
+    name: runner / misspell
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code.
+        uses: actions/checkout@v4
+      - name: misspell
+        uses: reviewdog/action-misspell@v1
+        with:
+          github_token: ${{ secrets.REVIEWDOG_TOKEN }}
+          locale: "US"
+          fail_on_error: true
   eslint:
     name: runner / eslint
     runs-on: ubuntu-latest
@@ -11,7 +23,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: reviewdog/action-eslint@v1
         with:
-          github_token: ${{secrets.REVIEWDOG_TOKEN}}
+          github_token: ${{ secrets.REVIEWDOG_TOKEN }}
           eslint_flags: "src/"
-          filter_mode: nofilter
           fail_on_error: true
