--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -25,4 +25,5 @@ jobs:
         with:
           github_token: ${{ secrets.REVIEWDOG_TOKEN }}
           eslint_flags: "src/"
+          filter_mode: nofilter
           fail_on_error: true
