--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -25,5 +25,6 @@ jobs:
         with:
           github_token: ${{ secrets.REVIEWDOG_TOKEN }}
           eslint_flags: "src/"
+          workdir: "backend"
           filter_mode: file
           fail_on_error: true
